# ggml-test

./: CMakeLists.txt  Makefile  README.md  main.cpp
.github/workflows/: ios.yml
whisper/: CMakeLists.txt  ggml.c
